--- a/research.html
+++ b/research.html
@@ -22,6 +22,7 @@
    <link rel="icon" type="image/png" sizes="32x32" href="favicons/favicon-32x32.png">
    <link rel="icon" type="image/png" sizes="96x96" href="favicons/favicon-96x96.png">
    <link rel="icon" type="image/png" sizes="16x16" href="favicons/favicon-16x16.png">
+   <link rel="icon" type="image/png" sizes="144x144" href="favicons/brain.png">
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
    <meta name="msapplication-TileColor" content="#ffffff">
    <meta name="msapplication-TileImage" content="favicons/brain.png">
@@ -60,6 +61,10 @@
 
       .panel-title {
          font-weight: bold !important;
+      }
+      
+      div {
+         padding: 0px
       }
       
       label {
